testData/highlighting/relativeImportIgnoringDirectories.go
package test

import `./<error descr="Cannot resolve file '.name'">.name</error>`
import `./<error descr="Cannot resolve file '_name'">_name</error>`
import `./<error descr="Cannot resolve file 'testdata'">testdata</error>`